--- a/style.css
+++ b/style.css
@@ -15,10 +15,15 @@ body {
     width: 30rem;
 }
 
-.question-footer{
+.question-footer {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid rgba(0, 0, 0, 0.4);
     align-items: center;
     padding-top: 12px;
+}
+
+.quiz-answer-card:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.05);
 }
