--- a/style.css
+++ b/style.css
@@ -28,19 +28,26 @@ body {
     background-color: rgba(0, 0, 0, 0.05);
 }
 
-.bg-success, .bg-danger {
-    color: white; 
+.bg-success,
+.bg-danger {
+    color: white;
 }
 
-.width-100{
+.width-100 {
     width: 100%;
 }
 
-.text-center{
+.text-center {
     text-align: center;
 }
 
-.finalheadline{
+.finalheadline {
     font-size: 38px;
     margin-bottom: 32px;
+}
+
+.button-row {
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
 }
